--- a/css/institucional.css
+++ b/css/institucional.css
@@ -52,3 +52,14 @@
 .institucional__video {
     width: 100vw;
 }
+
+/* ESTILIZAÇÃO PARA DISPOSITIVOS TABLETS */
+@media screen and (min-width: 768px){
+    .institucional__contato-email{
+        display: inline-block;
+    }
+
+    .institucional__video{
+        width: 100%;
+    }
+}
