all: finalização do layout para desktop

--- a/css/cabecalho.css
+++ b/css/cabecalho.css
@@ -43,3 +43,12 @@
         border: none;
     }
 }
+
+/* ESTILIZAÇÃO PARA DISPOSITIVOS DESKTOPS */
+@media screen and (min-width: 1024px){
+    .cabecalho{
+        flex-direction: row;
+        justify-content: space-between;
+        border: none;
+    }
+}
